# AppliedRoboticsStudentInterface

./: CMakeLists.txt  README.md
Metric-FF/: ff  ff.h  output.c  plan  scan-fct_pddl.tab.c  scan-ops_pddl.tab.c  search.c  search.h
src/: README.md  compile_and_run.sh  config.hpp  main.cpp  student_interface.cpp  test_log.txt
src/.tmp/: Fugitive_1_gate_0.pddl  Fugitive_1_gate_0.plan
src/Connector/: connector.cpp  connector.h
src/Dubins/: dubins.cpp  dubins.h
src/Log/: logger.cpp  logger.h
src/Pddl/: domain_fugitive_catcher.pddl  problem_catcher.pddl  problem_cathcer.pddl  problem_fugitive.pddl
src/Roadmap/: roadmap.cpp  roadmap.h
src/Robot_manager/: robot_manager.cpp  robot_manager.cpp~  robot_manager.h  robots.cpp  robots.h
src/Utility/: utility.cpp  utility.h
src/Utils/: utils.cpp  utils.h
src/World_representation/: world_representation.cpp  world_representation.h
